fix java8 compatibility